# Ethereum-Trading-MCP-Server

./: .env.example  .gitignore  Cargo.toml  README.md  TESTING.md  rust-toolchain.toml
docs/: task_description.md
src/: config.rs  error.rs  lib.rs  main.rs  precision.rs  tokens.rs
src/rpc/: client.rs
src/server/: mcp.rs  mod.rs
src/tools/: balance.rs  mod.rs  price.rs  swap.rs
